--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -281,3 +281,9 @@ ul.breadcrumb {
     }
   }
 }
+
+.pane-node-links {
+  img {
+    display: inline-block; 
+  }
+}
